--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +7,13 @@
     <script src="models/movable-object.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/chicken.class.js"></script>
+    <script src="models/clouds.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="js/game.js"></script>
     <title>Document</title>
 </head>
 <body onload="init()">
-    <h1>El pollp loko</h1>
+    <h1>El pollo loko</h1>
 
     <canvas id="myCanvas" width="720" height="480">
 
