--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="models/chicken.class.js"></script>
     <script src="models/clouds.class.js"></script>
     <script src="models/world.class.js"></script>
+    <script src="models/keyboard.class.js"></script>
     <script src="js/game.js"></script>
     <title>Document</title>
 </head>
